show count of filtered out junk items in the footer.

--- a/TakeBackChatter/FeedList.xib
+++ b/TakeBackChatter/FeedList.xib
@@ -12,6 +12,7 @@
 		</object>
 		<object class="NSArray" key="IBDocument.IntegratedClassDependencies">
 			<bool key="EncodedWithXMLCoder">YES</bool>
+			<string>NSTextField</string>
 			<string>NSToolbar</string>
 			<string>NSToolbarFlexibleSpaceItem</string>
 			<string>NSScroller</string>
@@ -19,6 +20,7 @@
 			<string>NSScrollView</string>
 			<string>NSButtonCell</string>
 			<string>NSToolbarSpaceItem</string>
+			<string>NSTextFieldCell</string>
 			<string>NSToolbarSeparatorItem</string>
 			<string>NSCustomView</string>
 			<string>NSCustomObject</string>
@@ -264,13 +266,13 @@
 							<string key="NSFrame">{{20, 7}, {106, 23}}</string>
 							<reference key="NSSuperview" ref="784581011"/>
 							<reference key="NSWindow"/>
-							<reference key="NSNextKeyView"/>
+							<reference key="NSNextKeyView" ref="9773862"/>
 							<bool key="NSEnabled">YES</bool>
 							<object class="NSButtonCell" key="NSCell" id="406583199">
 								<int key="NSCellFlags">-2080244224</int>
 								<int key="NSCellFlags2">134217728</int>
 								<string key="NSContents">More ...</string>
-								<object class="NSFont" key="NSSupport">
+								<object class="NSFont" key="NSSupport" id="199615227">
 									<string key="NSName">LucidaGrande</string>
 									<double key="NSSize">13</double>
 									<int key="NSfFlags">1044</int>
@@ -309,7 +311,7 @@
 									<reference key="NSWindow"/>
 									<reference key="NSNextKeyView" ref="355248523"/>
 									<reference key="NSDocView" ref="355248523"/>
-									<object class="NSColor" key="NSBGColor">
+									<object class="NSColor" key="NSBGColor" id="140367453">
 										<int key="NSColorSpace">6</int>
 										<string key="NSCatalogName">System</string>
 										<string key="NSColorName">controlColor</string>
@@ -353,6 +355,50 @@
 							<reference key="NSHScroller" ref="38972514"/>
 							<reference key="NSContentView" ref="94366454"/>
 						</object>
+						<object class="NSTextField" id="9773862">
+							<reference key="NSNextResponder" ref="784581011"/>
+							<int key="NSvFlags">289</int>
+							<string key="NSFrame">{{341, 12}, {49, 17}}</string>
+							<reference key="NSSuperview" ref="784581011"/>
+							<reference key="NSWindow"/>
+							<reference key="NSNextKeyView" ref="650288373"/>
+							<bool key="NSEnabled">YES</bool>
+							<object class="NSTextFieldCell" key="NSCell" id="814985827">
+								<int key="NSCellFlags">68288064</int>
+								<int key="NSCellFlags2">272630784</int>
+								<string key="NSContents"># Junk:</string>
+								<reference key="NSSupport" ref="199615227"/>
+								<reference key="NSControlView" ref="9773862"/>
+								<reference key="NSBackgroundColor" ref="140367453"/>
+								<object class="NSColor" key="NSTextColor" id="337854300">
+									<int key="NSColorSpace">6</int>
+									<string key="NSCatalogName">System</string>
+									<string key="NSColorName">controlTextColor</string>
+									<object class="NSColor" key="NSColor">
+										<int key="NSColorSpace">3</int>
+										<bytes key="NSWhite">MAA</bytes>
+									</object>
+								</object>
+							</object>
+						</object>
+						<object class="NSTextField" id="650288373">
+							<reference key="NSNextResponder" ref="784581011"/>
+							<int key="NSvFlags">289</int>
+							<string key="NSFrame">{{392, 12}, {49, 17}}</string>
+							<reference key="NSSuperview" ref="784581011"/>
+							<reference key="NSWindow"/>
+							<reference key="NSNextKeyView"/>
+							<bool key="NSEnabled">YES</bool>
+							<object class="NSTextFieldCell" key="NSCell" id="679483917">
+								<int key="NSCellFlags">68288064</int>
+								<int key="NSCellFlags2">272630784</int>
+								<string key="NSContents"># Junk:</string>
+								<reference key="NSSupport" ref="199615227"/>
+								<reference key="NSControlView" ref="650288373"/>
+								<reference key="NSBackgroundColor" ref="140367453"/>
+								<reference key="NSTextColor" ref="337854300"/>
+							</object>
+						</object>
 					</object>
 					<string key="NSFrame">{{7, 11}, {458, 696}}</string>
 					<reference key="NSSuperview"/>
@@ -365,7 +411,7 @@
 				<bool key="NSAutorecalculatesContentBorderThicknessMinY">NO</bool>
 				<double key="NSContentBorderThicknessMinY">38</double>
 			</object>
-			<object class="NSUserDefaultsController" id="955537296">
+			<object class="NSUserDefaultsController" id="787745721">
 				<bool key="NSSharedInstance">YES</bool>
 			</object>
 		</object>
@@ -428,10 +474,10 @@
 					<object class="IBBindingConnection" key="connection">
 						<string key="label">title: values</string>
 						<reference key="source" ref="1033082251"/>
-						<reference key="destination" ref="955537296"/>
+						<reference key="destination" ref="787745721"/>
 						<object class="NSNibBindingConnector" key="connector">
 							<reference key="NSSource" ref="1033082251"/>
-							<reference key="NSDestination" ref="955537296"/>
+							<reference key="NSDestination" ref="787745721"/>
 							<string key="NSLabel">title: values</string>
 							<string key="NSBinding">title</string>
 							<string key="NSKeyPath">values</string>
@@ -447,6 +493,26 @@
 						<reference key="destination" ref="1033082251"/>
 					</object>
 					<int key="connectionID">39</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBBindingConnection" key="connection">
+						<string key="label">value: feedDataSource.junkCount</string>
+						<reference key="source" ref="650288373"/>
+						<reference key="destination" ref="1001"/>
+						<object class="NSNibBindingConnector" key="connector">
+							<reference key="NSSource" ref="650288373"/>
+							<reference key="NSDestination" ref="1001"/>
+							<string key="NSLabel">value: feedDataSource.junkCount</string>
+							<string key="NSBinding">value</string>
+							<string key="NSKeyPath">feedDataSource.junkCount</string>
+							<object class="NSDictionary" key="NSOptions">
+								<string key="NS.key.0">NSNullPlaceholder</string>
+								<string key="NS.object.0">0</string>
+							</object>
+							<int key="NSNibBindingConnectorVersion">2</int>
+						</object>
+					</object>
+					<int key="connectionID">47</int>
 				</object>
 			</object>
 			<object class="IBMutableOrderedSet" key="objectRecords">
@@ -507,6 +573,8 @@
 							<bool key="EncodedWithXMLCoder">YES</bool>
 							<reference ref="375869219"/>
 							<reference ref="321266218"/>
+							<reference ref="9773862"/>
+							<reference ref="650288373"/>
 						</object>
 						<reference key="parent" ref="1033082251"/>
 					</object>
@@ -583,8 +651,36 @@
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">36</int>
-						<reference key="object" ref="955537296"/>
+						<reference key="object" ref="787745721"/>
 						<reference key="parent" ref="0"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">40</int>
+						<reference key="object" ref="9773862"/>
+						<object class="NSMutableArray" key="children">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<reference ref="814985827"/>
+						</object>
+						<reference key="parent" ref="784581011"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">41</int>
+						<reference key="object" ref="814985827"/>
+						<reference key="parent" ref="9773862"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">42</int>
+						<reference key="object" ref="650288373"/>
+						<object class="NSMutableArray" key="children">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<reference ref="679483917"/>
+						</object>
+						<reference key="parent" ref="784581011"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">43</int>
+						<reference key="object" ref="679483917"/>
+						<reference key="parent" ref="650288373"/>
 					</object>
 				</object>
 			</object>
@@ -609,6 +705,10 @@
 					<string>3.NSWindowTemplate.visibleAtLaunch</string>
 					<string>3.editorWindowContentRectSynchronizationRect</string>
 					<string>4.IBPluginDependency</string>
+					<string>40.IBPluginDependency</string>
+					<string>41.IBPluginDependency</string>
+					<string>42.IBPluginDependency</string>
+					<string>43.IBPluginDependency</string>
 					<string>5.IBPluginDependency</string>
 					<string>6.IBPluginDependency</string>
 					<string>7.IBPluginDependency</string>
@@ -639,6 +739,10 @@
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
+					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
+					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
+					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
+					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 				</object>
 			</object>
 			<object class="NSMutableDictionary" key="unlocalizedProperties">
@@ -653,7 +757,7 @@
 				<reference key="dict.values" ref="0"/>
 			</object>
 			<nil key="sourceID"/>
-			<int key="maxID">39</int>
+			<int key="maxID">47</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<object class="NSMutableArray" key="referencedPartialClassDescriptions">
