--- a/TakeBackChatter/FeedList.xib
+++ b/TakeBackChatter/FeedList.xib
@@ -16,11 +16,9 @@
 			<string>NSToolbar</string>
 			<string>NSToolbarFlexibleSpaceItem</string>
 			<string>NSScroller</string>
-			<string>NSButton</string>
 			<string>NSScrollView</string>
-			<string>NSButtonCell</string>
-			<string>NSToolbarSpaceItem</string>
 			<string>NSTextFieldCell</string>
+			<string>NSToolbarSpaceItem</string>
 			<string>NSToolbarSeparatorItem</string>
 			<string>NSCustomView</string>
 			<string>NSCustomObject</string>
@@ -260,32 +258,6 @@
 					<int key="NSvFlags">256</int>
 					<object class="NSMutableArray" key="NSSubviews">
 						<bool key="EncodedWithXMLCoder">YES</bool>
-						<object class="NSButton" id="321266218">
-							<reference key="NSNextResponder" ref="784581011"/>
-							<int key="NSvFlags">292</int>
-							<string key="NSFrame">{{20, 7}, {106, 23}}</string>
-							<reference key="NSSuperview" ref="784581011"/>
-							<reference key="NSWindow"/>
-							<reference key="NSNextKeyView" ref="9773862"/>
-							<bool key="NSEnabled">YES</bool>
-							<object class="NSButtonCell" key="NSCell" id="406583199">
-								<int key="NSCellFlags">-2080244224</int>
-								<int key="NSCellFlags2">134217728</int>
-								<string key="NSContents">More ...</string>
-								<object class="NSFont" key="NSSupport" id="199615227">
-									<string key="NSName">LucidaGrande</string>
-									<double key="NSSize">13</double>
-									<int key="NSfFlags">1044</int>
-								</object>
-								<reference key="NSControlView" ref="321266218"/>
-								<int key="NSButtonFlags">-2033434369</int>
-								<int key="NSButtonFlags2">162</int>
-								<string key="NSAlternateContents"/>
-								<string key="NSKeyEquivalent"/>
-								<int key="NSPeriodicDelay">400</int>
-								<int key="NSPeriodicInterval">75</int>
-							</object>
-						</object>
 						<object class="NSScrollView" id="375869219">
 							<reference key="NSNextResponder" ref="784581011"/>
 							<int key="NSvFlags">274</int>
@@ -328,7 +300,7 @@
 									<string key="NSFrame">{{444, 1}, {15, 658}}</string>
 									<reference key="NSSuperview" ref="375869219"/>
 									<reference key="NSWindow"/>
-									<reference key="NSNextKeyView" ref="321266218"/>
+									<reference key="NSNextKeyView"/>
 									<reference key="NSTarget" ref="375869219"/>
 									<string key="NSAction">_doScroller:</string>
 									<double key="NSPercent">0.99333333333333329</double>
@@ -367,7 +339,11 @@
 								<int key="NSCellFlags">68288064</int>
 								<int key="NSCellFlags2">272630784</int>
 								<string key="NSContents"># Junk:</string>
-								<reference key="NSSupport" ref="199615227"/>
+								<object class="NSFont" key="NSSupport" id="199615227">
+									<string key="NSName">LucidaGrande</string>
+									<double key="NSSize">13</double>
+									<int key="NSfFlags">1044</int>
+								</object>
 								<reference key="NSControlView" ref="9773862"/>
 								<reference key="NSBackgroundColor" ref="140367453"/>
 								<object class="NSColor" key="NSTextColor" id="337854300">
@@ -441,34 +417,6 @@
 						<reference key="destination" ref="355248523"/>
 					</object>
 					<int key="connectionID">23</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBBindingConnection" key="connection">
-						<string key="label">hidden: feedDataSource.hasMore</string>
-						<reference key="source" ref="321266218"/>
-						<reference key="destination" ref="1001"/>
-						<object class="NSNibBindingConnector" key="connector">
-							<reference key="NSSource" ref="321266218"/>
-							<reference key="NSDestination" ref="1001"/>
-							<string key="NSLabel">hidden: feedDataSource.hasMore</string>
-							<string key="NSBinding">hidden</string>
-							<string key="NSKeyPath">feedDataSource.hasMore</string>
-							<object class="NSDictionary" key="NSOptions">
-								<string key="NS.key.0">NSValueTransformerName</string>
-								<string key="NS.object.0">NSNegateBoolean</string>
-							</object>
-							<int key="NSNibBindingConnectorVersion">2</int>
-						</object>
-					</object>
-					<int key="connectionID">32</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBActionConnection" key="connection">
-						<string key="label">loadOlderRows:</string>
-						<reference key="source" ref="1001"/>
-						<reference key="destination" ref="321266218"/>
-					</object>
-					<int key="connectionID">33</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBBindingConnection" key="connection">
@@ -572,7 +520,6 @@
 						<object class="NSMutableArray" key="children">
 							<bool key="EncodedWithXMLCoder">YES</bool>
 							<reference ref="375869219"/>
-							<reference ref="321266218"/>
 							<reference ref="9773862"/>
 							<reference ref="650288373"/>
 						</object>
@@ -588,20 +535,6 @@
 							<reference ref="355248523"/>
 						</object>
 						<reference key="parent" ref="784581011"/>
-					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">7</int>
-						<reference key="object" ref="321266218"/>
-						<object class="NSMutableArray" key="children">
-							<bool key="EncodedWithXMLCoder">YES</bool>
-							<reference ref="406583199"/>
-						</object>
-						<reference key="parent" ref="784581011"/>
-					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">8</int>
-						<reference key="object" ref="406583199"/>
-						<reference key="parent" ref="321266218"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">9</int>
@@ -711,8 +644,6 @@
 					<string>43.IBPluginDependency</string>
 					<string>5.IBPluginDependency</string>
 					<string>6.IBPluginDependency</string>
-					<string>7.IBPluginDependency</string>
-					<string>8.IBPluginDependency</string>
 					<string>9.IBPluginDependency</string>
 				</object>
 				<object class="NSMutableArray" key="dict.values">
@@ -733,8 +664,6 @@
 					<string>{{380, 496}, {480, 360}}</string>
 					<boolean value="NO"/>
 					<string>{{33, 99}, {480, 360}}</string>
-					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
-					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
